| Summary: | ASTERISK-25407: Asterisk fails to log to multiple syslog destinations | ||||
| Reporter: | Elazar Broad (ebroad) | Labels: | |||
| Date Opened: | 2015-09-20 23:10:30 | Date Closed: | 2015-09-25 09:58:15 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Core/Logging | ||
| Versions: | SVN | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Slackware Linux x86-64 | Attachments: | ( 0) 25407_v1.patch | ||
| Description: | When configuring more than one syslog destinations in logger.conf, Asterisk will only log to the last one in the configuration. For example:
syslog.local1 => error, warning, notice syslog.local2 => security Everything is logged to local2. This is due to the fact that the final call to openlog() in make_log_channel() supersedes the previous calls. My humble suggestion would be to eliminate the openlog() call, as the syslog() call in ast_log_vsyslog() will open the log as needed; pass the channel facility to ast_log_vsyslog() and use the LOG_MAKEPRI macro to ensure the message is sent to the correct facility. I have tested this successfully on my system and will post a patch to reviewboard in the morning. Thanks, Elazar | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2015-09-20 23:10:31.518-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||||